0.2 -- <not yet released>
  * Added constraint rule parsing support. Is compiled into new
    Cassowary.Parsing assembly. Generating the parser requires Coco/R.
  * The assemblies are now strongly named by signing them with key files.

0.1.1 -- 2005-07-31:
  * Trace prints now use Cl.ArrayListToString() and Cl.HashtableToString() 
    methods instead of ArrayList and Hashtable's own ToString() methods
  * Added missing constructor ClStayConstraint(ClVariable var)
  * Fixed bug in ClSimplexSolver#InsertErrorVar(...)
  * Added extra constraints to LayoutTest class (to eliminate random behavior)
  * Now also compiles on Compact .NET (to do so, define COMPACT symbol)

0.1 -- 2005-05-27:
  * Initial release